<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_actors_detail"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/desc"/>
        </FrameLayout>
        <TextView
            android:id="@+id/tv_title_name"
            style="@style/TextTitle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent"/>

        <TextView
            android:id="@+id/tv_title_born"
            style="@style/TextTitle"
            android:text="@string/born" />

        <TextView
            android:id="@+id/tv_born"
            style="@style/TextContent"/>

        <TextView
            android:id="@+id/tv_title_drama"
            style="@style/TextTitle"
            android:text="@string/drama" />

        <TextView
            android:id="@+id/tv_drama"
            style="@style/TextContent"/>

        <TextView
            android:id="@+id/tv_title_about"
            style="@style/TextTitle"
            android:text="@string/about" />

        <TextView
            android:id="@+id/tv_detail"
            style="@style/TextContent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>